@@ -1,3 +1,9 @@
+Net::NAT::PMP (0.9.2)
+
+  * Made linux get_router_address() actually work.
+
+ -- David Caldwell <david@porkrind.org>  Sat, 14 Feb 2009 16:59:58 -0800
+
 Net::NAT::PMP (0.9.1)
 
   * First Version.
